# omniVoice

./: .gitignore  transcribe.py
speech-api/: .dockerignore  .gitignore  API.md  Dockerfile  docker-compose.yml  pyproject.toml  run.sh  speech-api.service  supervisord.conf  train_whisper_hy.py
speech-api/app/: main.py
speech-api/static/: index.html
