[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speech-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "sherpa-onnx",
    "omnivoice",
    "onnxruntime==1.23.2",
    "nemo_text_processing>=1.1.0",
]

[tool.uv.sources]
omnivoice = { path = "../OmniVoice", editable = true }
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
